--- a/1-setting-up.html
+++ b/1-setting-up.html
@@ -64,8 +64,7 @@ class: inverse, center, middle
 
 class: inverse, center, middle
 
-# Information About Today's Session
-
+# Session Information
 
 ---
 
@@ -77,7 +76,7 @@ class: inverse, center, middle
 https://github.com/jrosen48/swu-data-sci
 
 **RStudio Cloud**
-[link]
+https://rstudio.cloud/project/1421785
 
 **Ask questions on Google Docs:**
 https://docs.google.com/document/d/1zB3IilyuU0khd10DWQNn44peOkVNI-OLyxRW6WFW5Qw/edit
@@ -88,18 +87,12 @@ https://docs.google.com/document/d/1zB3IilyuU0khd10DWQNn44peOkVNI-OLyxRW6WFW5Qw/
 
 # Objectives
 
-Big goal: Support you to have confidence that you can solve the data analysis and data science-related problems you 
-wish to solve. 
+By the end of the session, participants will be able to:
 
-Specific goals:
-
-- Get up and running and know how to navigate R and RStudio
-- Know enough to get started witht he following:
-	- Visualize and explore data
-	- Statistically analyze data
-	- Prepare messy data
-	- Explore some of the more data science-y aspects of R through text analysis
-- Develop confidence going forward in you ability to analyze data as a part of your program
+1. Develop confidence going forward in you ability to analyze data as a part of your program
+1. Be able to visualize educational data.
+1. Use linear (regression) models as a general-purpose tool for data analysis.
+1. Explore some of the more data science-related aspects of R through text analysis
 
 ---
 
@@ -107,11 +100,11 @@ Specific goals:
 
 *Constructivist*
 
-You'll be involved in the process of building new capabilities (and knowledge and skills) with support from others and carefully-chosen scaffolds (and tools).
+You'll be involved in the process of building new capabilities (and knowledge and skills) with support from others and carefully-chosen scaffolds.
 
-- Each of the four sessions will be organized around a big idea
-- You will be doing a great deal of the work
-- Then, we will discuss what we did and how it applies
+1. Each of the four sessions will be organized around a big idea
+1. You will be doing a great deal of the work
+1. Then, we will discuss what we did and how it applies
 
 ---
 
@@ -170,7 +163,10 @@ problems that are important to you**
 
 class: inverse, center, middle
 
-# Prerequisites
+# Where You'll Be Running R
+
+- RStudio Cloud (preferred)
+- R and RStudio on your computer
 
 ---
 
@@ -207,32 +203,56 @@ Open RStudio. Find the console window and type in `2 + 2`. If what you can guess
 
 class: inverse, center, middle
 
-# Getting started with RStudio
+# Try it out! Getting started with RStudio
 
 Activities:  
 
-Running a single RMarkdown chunk  
-Running another RMarkdown chunk  
-Rendering an RMarkdown document to a PDF  
-Creating your first visualization
+- Running a single RMarkdown chunk  
+- Running another RMarkdown chunk  
+- Rendering an RMarkdown document to a PDF  
+- Creating your first visualization
+
+---
+
+# RMarkdown
+
+* RMarkdown is a data analysis "notebook" that combines text with code and output
+* It is a great file type to use when beginning to use R and to create reproducible analyses
+* It is fun to use because you can generate different types of output (Word, PDF, and even web-based)
 
 ---
 
 # Running a single RMarkdown chunk 
 
+Let's hop over to the "demo doc"!
+
+[`demo-doc-1-setting-up.Rmd`](demo-doc-1-setting-up.Rmd)
+
+Let's run the first chunk by clicking the green arrow in the first code chunk.
+
+If you saw the message "It worked!", congratulations - it worked!
+
 ---
 
 # Running another RMarkdown chunk  
 
+After running one chunk, we can easily run the next chunk. 
+
+What happens when you print the second chunk (with `sci_mo_processed`)?
+
+---
+
+# Working through the remainder of the document
+
+(We'll work together through a few sections of the document in this phase)
 
 ---
 
 # Rendering an RMarkdown document to a PDF  
 
+Have you made it to the end of the document? 
 
----
-
-# Creating your first visualization
+Now, we'll render to a PDF.
 
 ---
 
